# place_holder

./: pyproject.toml
place_holder/: main.py
place_holder/domain/: __init__.py  place.py  place_manager.py  place_parser.py  place_storage.py  place_type.py
place_holder/handler_storage/: __init__.py  handle_storage.py
place_holder/handlers/: __init__.py  handle.py
place_holder/infrastructure/parsers/: __init__.py  test_parser.py
place_holder/infrastructure/storages/: __init__.py  test_storage.py
