[tool.poetry]
name = "place-holder"
version = "0.1.0"
description = ""
authors = ["Ryumin Sergey <90983639+ryu-min@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "place_holder"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
